// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should work 1`] = `
"import { createHotContext as __vite__createHotContext } from "/@vite/client";import.meta.hot = __vite__createHotContext("/normal.md");
export const __pageData = JSON.parse("{\\"title\\":\\"\\",\\"description\\":\\"\\",\\"frontmatter\\":{},\\"headers\\":[],\\"relativePath\\":\\"normal.md\\",\\"filePath\\":\\"normal.md\\"}")
const _sfc_main = {name:"normal.md"}
import { createElementVNode as _createElementVNode, createTextVNode as _createTextVNode, resolveComponent as _resolveComponent, withCtx as _withCtx, createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "/@fs/root/node_modules/.pnpm/vue@3.5.16_typescript@5.8.3/node_modules/vue/dist/vue.runtime.esm-bundler.js"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_PluginTabsTab = _resolveComponent("PluginTabsTab")
  const _component_PluginTabs = _resolveComponent("PluginTabs")

  return (_openBlock(), _createElementBlock("div", null, [
    _createVNode(_component_PluginTabs, { sharedStateKey: "~detype" }, {
      default: _withCtx(() => [
        _createVNode(_component_PluginTabsTab, { label: "ts" }, {
          default: _withCtx(() => _cache[0] || (_cache[0] = [
            _createElementVNode("div", { class: "language-ts vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "ts"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "type"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " {")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#E36209","--shiki-dark":"#FFAB70"} }, "  foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " string"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ";")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "};")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "[] "),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [0]
        }),
        _createVNode(_component_PluginTabsTab, { label: "js" }, {
          default: _withCtx(() => _cache[1] || (_cache[1] = [
            _createElementVNode("div", { class: "language-js vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "js"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [1]
        })
      ]),
      _: 1 /* STABLE */
    })
  ]))
}


_sfc_main.__hmrId = "bb8e3465"
typeof __VUE_HMR_RUNTIME__ !== 'undefined' && __VUE_HMR_RUNTIME__.createRecord(_sfc_main.__hmrId, _sfc_main)
import.meta.hot.on('file-changed', ({ file }) => {
  __VUE_HMR_RUNTIME__.CHANGED_FILE = file
})
import.meta.hot.accept(mod => {
  if (!mod) return
  const { default: updated, _rerender_only } = mod
  if (_rerender_only) {
    __VUE_HMR_RUNTIME__.rerender(updated.__hmrId, updated.render)
  } else {
    __VUE_HMR_RUNTIME__.reload(updated.__hmrId, updated)
  }
})
import _export_sfc from "/@id/__x00__plugin-vue:export-helper"
export default /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file',"/root/packages/vitepress-plugin-detype/src/node/__test__/fixtures/normal.md"]])"
`;

exports[`vue 1`] = `
"import { createHotContext as __vite__createHotContext } from "/@vite/client";import.meta.hot = __vite__createHotContext("/vue.md");
export const __pageData = JSON.parse("{\\"title\\":\\"\\",\\"description\\":\\"\\",\\"frontmatter\\":{},\\"headers\\":[],\\"relativePath\\":\\"vue.md\\",\\"filePath\\":\\"vue.md\\"}")
const _sfc_main = {name:"vue.md"}
import { createElementVNode as _createElementVNode, createTextVNode as _createTextVNode, resolveComponent as _resolveComponent, withCtx as _withCtx, createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "/@fs/root/node_modules/.pnpm/vue@3.5.16_typescript@5.8.3/node_modules/vue/dist/vue.runtime.esm-bundler.js"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_PluginTabsTab = _resolveComponent("PluginTabsTab")
  const _component_PluginTabs = _resolveComponent("PluginTabs")

  return (_openBlock(), _createElementBlock("div", null, [
    _createVNode(_component_PluginTabs, { sharedStateKey: "~detype" }, {
      default: _withCtx(() => [
        _createVNode(_component_PluginTabsTab, { label: "ts" }, {
          default: _withCtx(() => _cache[0] || (_cache[0] = [
            _createElementVNode("div", { class: "language-vue vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "vue"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "<"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "script"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " setup"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " lang"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "="),
                    _createElementVNode("span", { style: {"--shiki-light":"#032F62","--shiki-dark":"#9ECBFF"} }, "\\"ts\\""),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "type"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " {")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#E36209","--shiki-dark":"#FFAB70"} }, "  foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " string"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ";")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "};")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "[] "),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "script"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "<"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "template"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "  <"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "div"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">{{ fooList."),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, "join"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "("),
                    _createElementVNode("span", { style: {"--shiki-light":"#032F62","--shiki-dark":"#9ECBFF"} }, "\\", \\""),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ") }}</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "div"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "template"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [0]
        }),
        _createVNode(_component_PluginTabsTab, { label: "js" }, {
          default: _withCtx(() => _cache[1] || (_cache[1] = [
            _createElementVNode("div", { class: "language-vue vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "vue"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "<"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "script"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " setup"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "script"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "<"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "template"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "  <"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "div"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">{{ fooList."),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, "join"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "("),
                    _createElementVNode("span", { style: {"--shiki-light":"#032F62","--shiki-dark":"#9ECBFF"} }, "\\", \\""),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ") }}</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "div"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "</"),
                    _createElementVNode("span", { style: {"--shiki-light":"#22863A","--shiki-dark":"#85E89D"} }, "template"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ">")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [1]
        })
      ]),
      _: 1 /* STABLE */
    })
  ]))
}


_sfc_main.__hmrId = "4a58c0b4"
typeof __VUE_HMR_RUNTIME__ !== 'undefined' && __VUE_HMR_RUNTIME__.createRecord(_sfc_main.__hmrId, _sfc_main)
import.meta.hot.on('file-changed', ({ file }) => {
  __VUE_HMR_RUNTIME__.CHANGED_FILE = file
})
import.meta.hot.accept(mod => {
  if (!mod) return
  const { default: updated, _rerender_only } = mod
  if (_rerender_only) {
    __VUE_HMR_RUNTIME__.rerender(updated.__hmrId, updated.render)
  } else {
    __VUE_HMR_RUNTIME__.reload(updated.__hmrId, updated)
  }
})
import _export_sfc from "/@id/__x00__plugin-vue:export-helper"
export default /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file',"/root/packages/vitepress-plugin-detype/src/node/__test__/fixtures/vue.md"]])"
`;

exports[`with highlight lines 1`] = `
"import { createHotContext as __vite__createHotContext } from "/@vite/client";import.meta.hot = __vite__createHotContext("/with-highlight-lines.md");
export const __pageData = JSON.parse("{\\"title\\":\\"\\",\\"description\\":\\"\\",\\"frontmatter\\":{},\\"headers\\":[],\\"relativePath\\":\\"with-highlight-lines.md\\",\\"filePath\\":\\"with-highlight-lines.md\\"}")
const _sfc_main = {name:"with-highlight-lines.md"}
import { createElementVNode as _createElementVNode, createTextVNode as _createTextVNode, resolveComponent as _resolveComponent, withCtx as _withCtx, createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "/@fs/root/node_modules/.pnpm/vue@3.5.16_typescript@5.8.3/node_modules/vue/dist/vue.runtime.esm-bundler.js"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_PluginTabsTab = _resolveComponent("PluginTabsTab")
  const _component_PluginTabs = _resolveComponent("PluginTabs")

  return (_openBlock(), _createElementBlock("div", null, [
    _createVNode(_component_PluginTabs, { sharedStateKey: "~detype" }, {
      default: _withCtx(() => [
        _createVNode(_component_PluginTabsTab, { label: "ts" }, {
          default: _withCtx(() => _cache[0] || (_cache[0] = [
            _createElementVNode("div", { class: "language-ts vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "ts"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line highlighted" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "type"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " {")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line highlighted" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#E36209","--shiki-dark":"#FFAB70"} }, "  foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " string"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, ";")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line highlighted" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "};")
                  ]),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line" }),
                  _createTextVNode("\\n"),
                  _createElementVNode("span", { class: "line highlighted" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, ":"),
                    _createElementVNode("span", { style: {"--shiki-light":"#6F42C1","--shiki-dark":"#B392F0"} }, " Foo"),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, "[] "),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [0]
        }),
        _createVNode(_component_PluginTabsTab, { label: "js" }, {
          default: _withCtx(() => _cache[1] || (_cache[1] = [
            _createElementVNode("div", { class: "language-js vp-adaptive-theme" }, [
              _createElementVNode("button", {
                title: "Copy Code",
                class: "copy"
              }),
              _createElementVNode("span", { class: "lang" }, "js"),
              _createElementVNode("pre", {
                class: "shiki shiki-themes github-light github-dark vp-code",
                tabindex: "0"
              }, [
                _createElementVNode("code", null, [
                  _createElementVNode("span", { class: "line highlighted" }, [
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, "const"),
                    _createElementVNode("span", { style: {"--shiki-light":"#005CC5","--shiki-dark":"#79B8FF"} }, " fooList"),
                    _createElementVNode("span", { style: {"--shiki-light":"#D73A49","--shiki-dark":"#F97583"} }, " ="),
                    _createElementVNode("span", { style: {"--shiki-light":"#24292E","--shiki-dark":"#E1E4E8"} }, " [];")
                  ])
                ])
              ])
            ], -1 /* HOISTED */)
          ])),
          _: 1 /* STABLE */,
          __: [1]
        })
      ]),
      _: 1 /* STABLE */
    })
  ]))
}


_sfc_main.__hmrId = "5bcedc41"
typeof __VUE_HMR_RUNTIME__ !== 'undefined' && __VUE_HMR_RUNTIME__.createRecord(_sfc_main.__hmrId, _sfc_main)
import.meta.hot.on('file-changed', ({ file }) => {
  __VUE_HMR_RUNTIME__.CHANGED_FILE = file
})
import.meta.hot.accept(mod => {
  if (!mod) return
  const { default: updated, _rerender_only } = mod
  if (_rerender_only) {
    __VUE_HMR_RUNTIME__.rerender(updated.__hmrId, updated.render)
  } else {
    __VUE_HMR_RUNTIME__.reload(updated.__hmrId, updated)
  }
})
import _export_sfc from "/@id/__x00__plugin-vue:export-helper"
export default /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file',"/root/packages/vitepress-plugin-detype/src/node/__test__/fixtures/with-highlight-lines.md"]])"
`;
